Trying to fix scale line layout problem

--- a/src/main/webapp/static/css/embedded_map.css
+++ b/src/main/webapp/static/css/embedded_map.css
@@ -10,7 +10,7 @@
 
 .custom-scale-line-top {
     background: transparent;
-    bottom: 25px;
+    bottom: 23px;
     left: 10px;
     padding: 0;
     margin: 0;
@@ -18,6 +18,7 @@
 }
 
 .custom-scale-line-top-inner {
+    font-family: Arial;
     border: 1px solid #3a3f44;
     border-top: none;
     color: #3a3f44;
@@ -37,6 +38,7 @@
 }
 
 .custom-scale-line-bottom-inner {
+    font-family: Arial;
     border: 1px solid #3a3f44;
     border-bottom: none;
     border-top: 1px solid #3a3f44;
